--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="https://q1.qlogo.cn/g?b=qq&nk=2207739460&src_uin=www.jlwz.cn&s=0" />
